# voc_rec

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
api/: config.py  db.py  main.py  streamlit_app.py
api/cruds/: korean_cards.py
api/models/: anki_cards.py
api/routers/: korean_cards.py
api/schemas/: anki_note.py
api/sql/: get_korean_deck_data.sql
api/utils/: db_sync.py  embedding_vector.py  korean_tools.py  tools.py
tests/: conftest.py  llm_test.ipynb  test_config.py  test_main.py
tests/test_data/: row1.json  row2.json  row3.json  row4.json  row5.json  row6.json
