[tool.poetry]
name = "anki-speak-assistant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    {include = "models", from = "api"},
    {include = "cruds", from = "api"}, 
    {include = "routers", from = "api"}, 
    {include = "schemas", from = "api"}, 
    {include = "utils", from = "api"}, 
    {include = "api"}
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.1"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
langdetect = "^1.0.9"
navertts = "^0.3.1"
pydantic-settings = "^2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.5"
alembic = "^1.13.1"
requests = "^2.32.2"
regex = "^2024.5.15"
python-dotenv = "^1.0.1"
openai = "^1.30.5"
asyncpg = "^0.29.0"
deep-translator = "^1.11.4"
beautifulsoup4 = "^4.12.3"
aiofiles = "^23.2.1"
scipy = "^1.13.1"
numpy = "^1.26.4"
streamlit = "^1.35.0"
boto3 = "^1.35.24"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
poethepoet = "^0.26.1"
pytest = "^8.2.2"
aiosqlite = "^0.20.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.7"
aiohttp = "^3.9.5"
pytest-aiohttp = "^1.0.5"


[tool.poetry.group.local.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.lint]
ignore = ["F841"]

[tool.poe.tasks]
test = "pytest tests/"
lint = "poetry run ruff check api tests --fix"
format = "poetry run ruff format api tests"
isort = "poetry run ruff check api tests --select I --fix-only"
db = "docker-compose exec db psql -U postgres -d anki_db"
con = "docker-compose exec app /bin/bash"
x = ["lint", "format", "isort"]



